--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
-# Compiled class file
-*.class
+client/.gradle
+client/.idea
+client/build
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+server/.gradle
+server/.idea
+server/build
+gradle-wrapper.jar
