--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-apply plugin: 'application'
 mainClassName = 'de.hs_rm.chat_server.Main'
 
 group 'de.hs_rm.chat_server'
