client: add basic infrastructure and frontend for sign in and sign up

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -11,7 +11,7 @@ version '1.0'
 
 javafx {
     version = "15.0.1"
-    modules = [ 'javafx.controls' ]
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 repositories {
