fix package paths and build.gradle

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'application'
 }
 
-mainClassName = 'de.hs_rm.chat_server.Main'
+mainClassName = 'de.hs_rm.chat_server.Server'
 
 group 'de.hs_rm.chat_server'
 version '1.0'
