--- a/server/build.gradle
+++ b/server/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     implementation 'com.h2database:h2:1.4.200'
+    implementation 'com.google.code.gson:gson:2.8.7'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
